Chat messages now connected to Firestore

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,4 +22,10 @@ body {
     border: 0;
     border-radius: 20px;
     padding: 10px 20px;
+    cursor: pointer;
+  }
+  button:hover {
+    background: #358677;
+    color: white;
+    transform: color 0.3s;
   }
